// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/Layout/Container > has full width once set 1`] = `
<div
  class="MuiContainer-root Container-fullWidth"
>
  long content
</div>
`;

exports[`components/Layout/Container > has restricted width by default 1`] = `
<div
  class="MuiContainer-root Container-contained MuiContainer-maxWidthLg"
/>
`;

exports[`components/Layout/Container > requires Provider 1`] = `
<span>
  Error: 
  Context must be used within a Provider
</span>
`;

exports[`components/Layout/Container > still has full width when other remove full width 1`] = `
<div
  class="MuiContainer-root Container-fullWidth"
>
  short content
  long content
  short content
  long content
  short content
</div>
`;
